@@ -1,6 +1,8 @@
 Changes made from the "0.3" release to the "0.4" release:
 -----------------------------------------------------------
 
+- Uses GNU extensions of gcc where possible to implement the constructor and the
+  destructor of the library (instead of _init and _fini)
 - Fixed the crashes due to the removal of the combine callback of the GLU
   tesselator. The callback is now restored and compatible with the arrays of
   variable size (__glcArray)
